--- a/docs/modules/ROOT/partials/lua_examples.adoc
+++ b/docs/modules/ROOT/partials/lua_examples.adoc
@@ -9,5 +9,5 @@ xref:lua/examples/randomPlot.adoc[Random Plot]
 -
 xref:lua/examples/storageRefill.adoc[Storage Refill]
 -
-xref:lua/examples/drive.adoc[Drive Example]
+xref:lua/examples/allAboutSeries/files_and_drives.adoc[All about Files and Drives]
 ====
