--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -49,6 +49,7 @@
 *** xref:lua/examples/paint.adoc[Paint]
 *** xref:lua/examples/randomPlot.adoc[Random Plot]
 *** xref:lua/examples/storageRefill.adoc[Storage Refill]
-*** xref:lua/examples/drive.adoc[Drive Example]
+** xref:lua/tutorials/index.adoc[Tutorials]
+*** xref:lua/tutorials/allAboutSeries/index.adoc[All About Series]
 * xref:ModIntegration.adoc[Mod Integration]
 * xref:credits.adoc[Credits]
